<resources>
    <string name="app_name">SmartMemo</string>
    <string name="tab_text_1">MAP</string>
    <string name="tab_text_2">MEMO\nLIST</string>
    <string name="tab_text_3">TODO\nLIST</string>
    <string name="tab_text_4">알람 관리</string>
    <string name="tab_text_5">더보기</string>

    <string name="todo">TODO LIST</string>
    <string name="place_alarm">장소 알람 관리</string>
    <string name="time_alarm">시간 알람 관리</string>

    <string name="fab_memo">일반메모</string>
    <string name="fab_todo">TODO LIST</string>

    <string name="nav_profile_name">정지원</string>
    <string name="nav_my_memo">내 메모</string>
    <string name="nav_school_memo">학교</string>
    <string name="nav_travel_memo">여행</string>
    <string name="nav_group_memo">그룹 메모</string>
    <string name="add_group">폴더 추가</string>
    <string name="setting_group">폴더 설정</string>
    <string name="update_group">폴더 수정</string>

    <string name="group_name">폴더 이름</string>
    <string name="group_color">테마 컬러</string>
    <string name="group_invitation">그룹 멤버 초대</string>
    <string name="group_member">그룹 멤버</string>

    <string name="write_memo">메모 작성</string>
    <string name="writing_location">한성대학교</string>

    <string name="ring_again">다시 울림</string>

    <!-- location -->
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
</resources>
